
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct forth_output {int dummy; } ;
typedef int s ;


 int DiskResource ;
 long long GetMagickResourceLimit (int ) ;
 int InitializeMagick (char*) ;
 int MAX_SHARED_MEMORY_SIZE ;
 int MapResource ;
 int MemoryResource ;
 int PixelsResource ;
 int SETENV_TMP (char*) ;
 int SetMagickResourceLimit (int ,int) ;
 int ThreadsResource ;
 int assert (int) ;
 long long gm_max_load_image_area ;
 int image_initialized ;
 int kprintf (char*,long long) ;
 int snprintf (char*,int,char*,long long) ;
 int unsetenv (char*) ;
 int verbosity ;

void image_init (char *prog_name, long long max_load_image_area, long long memory_limit, long long map_limit, long long disk_limit, int threads_limit) {
  char *t[4];
  int k = 0;
  if (image_initialized) {
    return;
  }
  assert (sizeof (struct forth_output) == MAX_SHARED_MEMORY_SIZE);
  image_initialized = 1;

  char s[32];


  if (memory_limit > 0) {
    assert (snprintf (s, sizeof (s), "%lldk", memory_limit >> 10) < sizeof (s));
    assert(!setenv(t[k++] = "MAGICK_LIMIT_MEMORY",s,1));
  }

  if (map_limit > 0) {
    assert (snprintf (s, sizeof (s), "%lldk", map_limit >> 10) < sizeof (s));
    assert(!setenv(t[k++] = "MAGICK_LIMIT_MAP",s,1));
  }

  if (disk_limit >= 0) {
    assert (snprintf (s, sizeof (s), "%lldk", disk_limit >> 10) < sizeof (s));
    assert(!setenv(t[k++] = "MAGICK_LIMIT_DISK",s,1));
  }

  if (max_load_image_area > 0) {
    gm_max_load_image_area = max_load_image_area;
    assert (snprintf (s, sizeof (s), "%lld", max_load_image_area) < sizeof (s));
    assert(!setenv(t[k++] = "MAGICK_LIMIT_PIXELS",s,1));
  }



  InitializeMagick (prog_name);

  while (--k >= 0) {
    unsetenv (t[k]);
  }

  SetMagickResourceLimit (ThreadsResource, threads_limit);

  if (verbosity >= 3) {
    long long x = GetMagickResourceLimit (MemoryResource);
    kprintf ("GetMagickResourceLimit (MemoryResource): %lld\n", x);
    x = GetMagickResourceLimit (DiskResource);
    kprintf ("GetMagickResourceLimit (DiskResource): %lld\n", x);
    x = GetMagickResourceLimit (MapResource);
    kprintf ("GetMagickResourceLimit (MapResource): %lld\n", x);
    x = GetMagickResourceLimit (PixelsResource);
    kprintf ("GetMagickResourceLimit (PixelsResource): %lld\n", x);
    x = GetMagickResourceLimit (ThreadsResource);
    kprintf ("GetMagickResourceLimit (ThreadsResource): %lld\n", x);
  }

}
